--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
 
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" type=“text/css” href="/style.css" />
     <title>Visualise Sorting</title>
   </head>
 
