fixex: generate array button

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </span>
         </div>
         <div class="button">
-          <a class="start" id="random" onclick="RenderScreen()"
+          <a id="random" onclick="RenderScreen()"
             >Generate array</a
           >
           <a class="start">Try Sort</a>
